# term-logger

./: .gitignore  CMakeLists.txt  compile_commands.json  flake.nix  logger.bash  setup.sh  shell.nix
cmd/: clean.bash  commands  declutter-script.perl  logger.bash  loglocation
include/: fuzzy.hpp  ripgrep.hpp  tui.hpp
src/: fuzzy.cpp  main.cpp  ripgrep.cpp  tui.cpp
